BUG - misaligned margin

--- a/src/columns.css
+++ b/src/columns.css
@@ -1,4 +1,5 @@
 @keyframes pulse {
+
   0%,
   100% {
     transform: scale(1);
@@ -18,7 +19,7 @@
 .column {
   background: #626264;
   border-radius: 0.25em;
-  margin: 1rem;
+  margin: 1rem 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -89,6 +90,7 @@
   .column {
     width: calc(33.33% - 2rem);
     transform: scale(1);
+    margin: 1rem;
   }
 
   .column_container:hover .column:hover {
