--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html {
 
 html * {
   box-sizing: border-box;
+  outline: 1px solid red;
 }
 
 body {
